[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/Player/Hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player/Stats.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/32-32_white.png" type="Texture" id=4]
[ext_resource path="res://src/Player/SFXPlayer.gd" type="Script" id=5]
[ext_resource path="res://src/VFX/blur.gdshader" type="Shader" id=6]
[ext_resource path="res://assets/audio/hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://src/UI/Components/Button/QuitButton.gd" type="Script" id=8]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=9]
[ext_resource path="res://src/Libraries/AnimationPlayer.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/big_fonts.tres" type="DynamicFont" id=11]
[ext_resource path="res://src/Player/States/Movement/WallRun.gd" type="Script" id=12]
[ext_resource path="res://src/Player/States/Movement/Crouch.gd" type="Script" id=13]
[ext_resource path="res://src/Libraries/StateMachine/StateMachine.gd" type="Script" id=14]
[ext_resource path="res://src/Player/States/Movement/Move.gd" type="Script" id=15]
[ext_resource path="res://src/Player/MouseController.gd" type="Script" id=16]
[ext_resource path="res://src/Player/States/Movement/Air.gd" type="Script" id=17]
[ext_resource path="res://src/Player/States/Movement/Idle.gd" type="Script" id=18]
[ext_resource path="res://src/Player/States/Movement/Walk.gd" type="Script" id=19]
[ext_resource path="res://src/Player/States/Movement/Sprint.gd" type="Script" id=20]
[ext_resource path="res://assets/theme.tres" type="Theme" id=21]
[ext_resource path="res://src/Player/States/Weapons/Weapon.gd" type="Script" id=22]
[ext_resource path="res://src/Player/States/Weapons/Fire.gd" type="Script" id=23]
[ext_resource path="res://src/UI/InGame/Restart.gd" type="Script" id=24]
[ext_resource path="res://src/Player/HUD/Pause.gd" type="Script" id=25]
[ext_resource path="res://src/Player/States/Movement/Slide.gd" type="Script" id=27]
[ext_resource path="res://src/Player/States/Weapons/Idle.gd" type="Script" id=28]
[ext_resource path="res://src/Utils/ShaderCache.tscn" type="PackedScene" id=29]

[sub_resource type="CapsuleShape" id=1]
radius = 1.2
height = 9.0

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.8, 0.2, 0.8 )

[sub_resource type="Animation" id=3]
resource_name = "DEFAULT"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../../BodyCollisionShape:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.308, -0.065 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 11.239, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../../BodyCollisionShape:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 5.0, 9.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 8.58437, 0 ), Vector3( 0, 8.58437, 0 ), Vector3( 0, 11.239, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../../BodyCollisionShape:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9.0, 5.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 11.239, 0 ), Vector3( 0, 8.58437, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bottom_IMG:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Vector2( 18.5, 25.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Top_IMG:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Vector2( 18.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Left_IMG:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Vector2( 16.5, 18.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_IMG:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2 ),
"update": 0,
"values": [ Vector2( 40.5, 18.5 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Move"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Bottom_IMG:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 18.5, 25.5 ), Vector2( 18.5, 35.5 ), Vector2( 18.5, 25.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Top_IMG:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 18.5, 0.5 ), Vector2( 18.5, -9.5 ), Vector2( 18.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Left_IMG:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 16.5, 18.5 ), Vector2( 6.5, 18.5 ), Vector2( 16.5, 18.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Right_IMG:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 40.5, 18.5 ), Vector2( 50.5, 18.5 ), Vector2( 40.5, 18.5 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Blur:material:shader_param/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Color:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.423529 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blur:material:shader_param/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.5, 0.0 ]
}

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 6 )
shader_param/lod = 0.0

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/lod = 3.0

[node name="Player" type="KinematicBody"]
collision_layer = 3
script = ExtResource( 9 )
life = 30.0

[node name="LookAt" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.1204, 0 )

[node name="BodyCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.81098, 0 )
shape = SubResource( 1 )

[node name="FeetCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.493176, 0 )
shape = SubResource( 2 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.239, 0 )

[node name="Model" type="Spatial" parent="RotationHelper"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="RotationHelper/Model"]
autoplay = "DEFAULT"
anims/DEFAULT = SubResource( 3 )
anims/Position_crouch_to_standing = SubResource( 4 )
anims/Position_standing_to_crouch = SubResource( 5 )
next/DEFAULT = "Gun_idle"
script = ExtResource( 10 )

[node name="Weapon" type="Spatial" parent="RotationHelper/Model"]
transform = Transform( 0.999676, 0, -0.0254442, 0, 1, 0, 0.0254442, 0, 0.999676, -1.07127, -1.61415, 3.03187 )

[node name="Hand" parent="RotationHelper/Model/Weapon" instance=ExtResource( 1 )]
transform = Transform( -1, 1.50996e-07, 0, 1.50996e-07, 1, 0, 0, 0, -1, 0, 0, -0.21922 )

[node name="AnimationPlayer" parent="RotationHelper/Model/Weapon/Hand" index="0"]
autoplay = "Hand_idle"

[node name="PortalGun" parent="RotationHelper/Model/Weapon/Hand" index="1"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.160251, 0, -0.314132 )
sway_left = Vector3( 0, 0.3, 0 )
sway_right = Vector3( 0, -0.3, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, -0.308, -0.065 )
current = true
fov = 85.0
far = 500.0

[node name="ShaderCache" parent="RotationHelper/Camera" instance=ExtResource( 29 )]

[node name="Gun_Fire_Points" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.3914, 0 )

[node name="MuzzleFlash" type="Spatial" parent="RotationHelper/Gun_Fire_Points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.936842, 11.3331, 3.54025 )

[node name="RayCast" type="RayCast" parent="RotationHelper/Gun_Fire_Points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.5882, 1.44667 )
enabled = true
cast_to = Vector3( 0, 0, 500 )

[node name="Flashlight" type="SpotLight" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, -0.307539, -0.0646362 )
visible = false
light_color = Color( 1, 0.915375, 0.769531, 1 )
light_energy = 0.8
spot_range = 30.0
spot_attenuation = 2.0
spot_angle = 50.0

[node name="Grenade_Toss_Pos" type="Spatial" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 0.983001, 0.1836, 0, -0.1836, 0.983001, 0, -0.411827, 1.2795 )

[node name="RayCastLeft" type="RayCast" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.78238, 0 )
enabled = true
cast_to = Vector3( 5, 0, 0 )

[node name="RayCastRight" type="RayCast" parent="RotationHelper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.78238, 0 )
enabled = true
cast_to = Vector3( -5, 0, 0 )

[node name="HeadBunker" type="RayCast" parent="RotationHelper"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1.05598, 0 )
enabled = true
cast_to = Vector3( 3, 0, 0 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Stats"]
stream = ExtResource( 7 )
script = ExtResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 14 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 18 )

[node name="Walk" type="Node" parent="StateMachine/Move"]
script = ExtResource( 19 )

[node name="Sprint" type="Node" parent="StateMachine/Move"]
script = ExtResource( 20 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 17 )

[node name="CoyoteTime" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.25
one_shot = true

[node name="WallRunTimer" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.3
one_shot = true

[node name="WallRun" type="Node" parent="StateMachine/Move"]
script = ExtResource( 12 )

[node name="Tween" type="Tween" parent="StateMachine/Move/WallRun"]

[node name="Crouch" type="Node" parent="StateMachine/Move"]
script = ExtResource( 13 )

[node name="Slide" type="Node" parent="StateMachine/Move"]
script = ExtResource( 27 )

[node name="Timer" type="Timer" parent="StateMachine/Move/Slide"]
wait_time = 0.1
one_shot = true

[node name="WeaponsStateMachine" type="Node" parent="."]
script = ExtResource( 14 )
initial_state = NodePath("Gun/Idle")

[node name="Gun" type="Node" parent="WeaponsStateMachine"]
script = ExtResource( 22 )
weapons_path = NodePath("../../RotationHelper/Gun_Fire_Points/MuzzleFlash")
damage = 12.0

[node name="Idle" type="Node" parent="WeaponsStateMachine/Gun"]
script = ExtResource( 28 )
animation_name = "Gun_idle"

[node name="Fire" type="Node" parent="WeaponsStateMachine/Gun"]
script = ExtResource( 23 )
animation_name = "Gun_fire"
next_state = "Gun/Idle"
animation_speed = 1.4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WeaponsStateMachine/Gun/Fire"]
stream = ExtResource( 3 )
volume_db = -6.0
script = ExtResource( 5 )
min_pitch_scale = 0.7
max_pitch_scale = 1.3

[node name="MouseController" type="Node" parent="."]
script = ExtResource( 16 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Control" parent="HUD"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -21.0
margin_right = 21.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_IMG" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = 4.5
margin_right = 2.5
margin_bottom = 20.5
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_IMG" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -20.5
margin_right = 2.5
margin_bottom = -4.50001
texture = ExtResource( 4 )
expand = true

[node name="Left_IMG" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.5
margin_top = -2.5
margin_right = 0.500004
margin_bottom = 12.5
rect_rotation = 90.0
texture = ExtResource( 4 )
expand = true

[node name="Right_IMG" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 19.5
margin_top = -2.5
margin_right = 24.5
margin_bottom = 12.5
rect_rotation = 90.0
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Crosshair"]
anims/Idle = SubResource( 6 )
anims/Move = SubResource( 7 )

[node name="Damage" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Damage"]
anims/DEFAULT = SubResource( 8 )
anims/Damage = SubResource( 9 )

[node name="Blur" type="ColorRect" parent="HUD/Damage"]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="ColorRect" parent="HUD/Damage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.18921
margin_right = -1.18921
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="ColorRect" parent="HUD/Pause"]
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.996078, 0.462745, 0.611765, 1 )

[node name="Color" type="ColorRect" parent="HUD/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.486275 )

[node name="Label" type="Label" parent="HUD/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -429.764
margin_top = -322.706
margin_right = 450.236
margin_bottom = -142.706
custom_fonts/font = ExtResource( 11 )
text = "Stop waiting for Godot
by Levrault"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HUD/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Pause/CenterContainer"]
margin_left = 592.0
margin_top = 295.0
margin_right = 688.0
margin_bottom = 425.0
custom_constants/separation = 32

[node name="Resume" type="Button" parent="HUD/Pause/CenterContainer/VBoxContainer"]
margin_right = 96.0
margin_bottom = 22.0
text = "Resume"

[node name="Restart" type="Button" parent="HUD/Pause/CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 96.0
margin_bottom = 76.0
text = "Restart"
script = ExtResource( 24 )

[node name="Quit" type="Button" parent="HUD/Pause/CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 96.0
margin_bottom = 130.0
text = "Quit"
script = ExtResource( 8 )

[editable path="RotationHelper/Model/Weapon/Hand"]
[editable path="RotationHelper/Model/Weapon/Hand/PortalGun"]
